fixed colour and spacing issues

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -144,7 +144,7 @@ section h2 {
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
 	width: 100%;
-	background-color: #FFFFFF;
+	background-color: #1B1B1B;
 	color: #18BC9C;
 }
 
@@ -189,6 +189,8 @@ section h2 {
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
     padding-bottom: 1rem;
+	opacity: 0.95;
+    filter: alpha(opacity=50);
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.5em;
